implement gateway (dockerize fail)