@@ -1,7 +1,5 @@
 package fr.swynn.controllers;
 
-import java.util.stream.Collectors;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -20,7 +18,7 @@ public class GlobalExceptionHandler {
             .getFieldErrors()
             .stream()
             .map(error -> error.getField() + ": " + error.getDefaultMessage())
-            .collect(Collectors.toList());
+            .toList();
 
         // Create a structured error response
         var errorResponse = new ErrorResponse(
